erDiagram
    %% ===== CORE TABLES WITH DETAILED RELATIONSHIPS =====
    
    users {
        bigint id PK "Auto-increment"
        varchar name "Full name"
        varchar email UK "Unique email"
        timestamp email_verified_at "Email verification"
        varchar password "Hashed password"
        varchar remember_token "Auth token"
        timestamp created_at "Created timestamp"
        timestamp updated_at "Updated timestamp"
        text two_factor_secret "2FA secret"
        text two_factor_recovery_codes "2FA recovery"
        timestamp two_factor_confirmed_at "2FA confirmed"
        boolean is_approved "Account approved"
        varchar role "User role"
        boolean is_premium "Premium status"
        bigint current_team_id "Current team"
        varchar profile_photo_path "Profile photo"
    }

    files {
        bigint id PK "Auto-increment"
        bigint user_id FK "Owner user ID"
        varchar file_name "File/folder name"
        varchar file_path "Storage path"
        varchar file_size "Human readable size"
        varchar file_type "File category"
        varchar mime_type "MIME type"
        timestamp created_at "Created timestamp"
        timestamp updated_at "Updated timestamp"
        bigint parent_id FK "Parent folder ID"
        boolean is_folder "Is directory"
        timestamptz deleted_at "Soft delete"
        varchar blockchain_provider "Blockchain service"
        varchar ipfs_hash "IPFS hash"
        text blockchain_url "Blockchain URL"
        boolean is_blockchain_stored "On blockchain"
        json blockchain_metadata "Blockchain data"
        boolean is_vectorized "AI processed"
        timestamptz vectorized_at "Vector timestamp"
    }

    documents {
        bigint id PK "Auto-increment"
        text content "Document text"
        jsonb metadata "Document metadata"
        vector embedding "AI vector"
        bigint user_id "Document owner"
        bigint file_id FK "Source file ID"
    }

    document_metadata {
        text id PK "Dataset identifier"
        text title "Dataset title"
        text url "Source URL"
        timestamp created_at "Created timestamp"
        text schema "Data schema"
        bigint user_id "Dataset owner"
        bigint file_id FK "Source file ID"
        boolean is_deleted "Soft delete flag"
        timestamptz deleted_at "Delete timestamp"
    }

    document_rows {
        integer id PK "Auto-increment"
        text dataset_id FK "Parent dataset"
        jsonb row_data "Row JSON data"
        bigint file_id FK "Source file ID"
    }

    blockchain_configs {
        bigint id PK "Auto-increment"
        bigint user_id FK "Config owner"
        varchar provider "Provider name"
        text api_key_encrypted "Encrypted API key"
        json settings "Provider settings"
        boolean is_active "Active config"
        timestamp created_at "Created timestamp"
        timestamp updated_at "Updated timestamp"
    }

    blockchain_uploads {
        bigint id PK "Auto-increment"
        bigint file_id FK "Uploaded file ID"
        varchar provider "Upload provider"
        varchar ipfs_hash "IPFS hash"
        varchar upload_status "Upload status"
        text error_message "Error details"
        numeric upload_cost "Upload cost"
        json provider_response "Provider response"
        timestamp created_at "Upload started"
        timestamp updated_at "Status updated"
    }

    system_activities {
        bigint id PK "Auto-increment"
        bigint user_id FK "Actor user ID"
        bigint target_user_id FK "Target user ID"
        bigint file_id FK "Affected file ID"
        varchar activity_type "Activity category"
        varchar action "Specific action"
        varchar entity_type "Entity type"
        bigint entity_id "Entity ID"
        text description "Activity description"
        jsonb metadata "Activity metadata"
        inet ip_address "Actor IP"
        text user_agent "User agent"
        varchar session_id "Session ID"
        varchar location_country "Country"
        varchar location_city "City"
        varchar device_type "Device type"
        varchar browser "Browser"
        varchar risk_level "Risk assessment"
        boolean requires_audit "Needs audit"
        boolean is_suspicious "Suspicious flag"
        timestamp created_at "Activity timestamp"
    }

    file_access_logs {
        bigint id PK "Auto-increment"
        bigint file_id FK "Accessed file ID"
        bigint user_id FK "Accessor user ID"
        varchar session_id FK "User session ID"
        varchar access_type "Access method"
        varchar access_method "Access channel"
        bigint file_size_at_access "File size"
        varchar file_version_at_access "File version"
        inet ip_address "Client IP"
        text user_agent "Client agent"
        text referrer "Referrer URL"
        integer response_time_ms "Response time"
        bigint bytes_transferred "Bytes sent"
        timestamp started_at "Access start"
        timestamp completed_at "Access end"
        integer duration_seconds "Duration"
    }

    user_sessions {
        bigint id PK "Auto-increment"
        bigint user_id FK "Session user ID"
        varchar session_id UK "Session identifier"
        inet ip_address "Session IP"
        text user_agent "User agent"
        text device_fingerprint "Device fingerprint"
        varchar location_country "Country"
        varchar location_city "City"
        varchar location_timezone "Timezone"
        boolean is_active "Active session"
        timestamp last_activity_at "Last activity"
        varchar login_method "Login method"
        boolean is_suspicious "Suspicious flag"
        boolean trusted_device "Trusted device"
        timestamp created_at "Session start"
        timestamp expires_at "Session expires"
        timestamp logged_out_at "Logout time"
    }

    saved_searches {
        bigint id PK "Auto-increment"
        bigint user_id FK "Search owner ID"
        varchar name "Search name"
        text query "Search query"
        jsonb filters "Search filters"
        varchar sort_by "Sort field"
        varchar sort_order "Sort direction"
        boolean is_default "Default search"
        boolean is_shared "Shared search"
        timestamp created_at "Created timestamp"
        timestamp updated_at "Updated timestamp"
    }

    notifications {
        bigint id PK "Auto-increment"
        bigint user_id FK "Recipient user ID"
        varchar type "Notification type"
        varchar title "Notification title"
        text message "Notification message"
        jsonb data "Notification data"
        timestamptz read_at "Read timestamp"
        timestamptz created_at "Created timestamp"
        timestamptz updated_at "Updated timestamp"
    }

    %% ===== DETAILED FOREIGN KEY RELATIONSHIPS =====
    
    %% Core Entity Relationships
    users ||--o{ files : "users.id → files.user_id"
    files ||--o{ files : "files.id → files.parent_id (folders)"
    files ||--o{ documents : "files.id → documents.file_id"
    files ||--o{ document_metadata : "files.id → document_metadata.file_id"
    files ||--o{ document_rows : "files.id → document_rows.file_id"
    
    %% Document Relationships
    document_metadata ||--o{ document_rows : "document_metadata.id → document_rows.dataset_id"
    
    %% Blockchain Relationships
    users ||--o{ blockchain_configs : "users.id → blockchain_configs.user_id"
    files ||--o{ blockchain_uploads : "files.id → blockchain_uploads.file_id"
    
    %% Activity Tracking Relationships
    users ||--o{ system_activities : "users.id → system_activities.user_id"
    users ||--o{ system_activities : "users.id → system_activities.target_user_id"
    files ||--o{ system_activities : "files.id → system_activities.file_id"
    
    %% File Access Relationships
    files ||--o{ file_access_logs : "files.id → file_access_logs.file_id"
    users ||--o{ file_access_logs : "users.id → file_access_logs.user_id"
    user_sessions ||--o{ file_access_logs : "user_sessions.session_id → file_access_logs.session_id"
    
    %% Session Relationships
    users ||--o{ user_sessions : "users.id → user_sessions.user_id"
    
    %% Search & Notification Relationships
    users ||--o{ saved_searches : "users.id → saved_searches.user_id"
    users ||--o{ notifications : "users.id → notifications.user_id"
